--- a/manifest.json
+++ b/manifest.json
@@ -1,11 +1,15 @@
 {
-  "name": "Slowed + Reverb",
-  "short_name": "S+R",
-  "start_url": "index.html",
+  "name": "Unilab",
+  "short_name": "Unilab",
+  "start_url": "./index.html",
   "display": "standalone",
-  "background_color": "#0f1115",
-  "theme_color": "#0f1115",
+  "background_color": "#000000",
+  "theme_color": "#d4af37",
   "icons": [
-    { "src": "icon-512.png", "sizes": "512x512", "type": "image/png" }
+    {
+      "src": "icon-512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+    }
   ]
 }
